[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "uvicorn>=0.48.0",
]
